2012-06-13  Bill Schmidt  <wschmidt@linux.ibm.com>

PR tree-optimization/53647
	* tree-ssa-phiopt.c (gate_hoist_loads): Skip transformation for
	targets with no defined cache line size.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@188509 138bc75d-0d04-0410-961f-82ee72b054a4